[package]
name = "isw-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "0.3.0"
regex = "1"
clap = "3.0.0-beta.3"
num = "0.4"
byteordered = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"